# streamyfin-optimization-server-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: main.rs  video.rs
